usb-moded (0.34) unstable; urgency=low

  * Delay unloading a bit more (5s instead of 3). Fixes: NB#225492
  * Fixes for USB autoplay. Fixes: NB#220474

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Fri, 01 Apr 2011 13:22:51 +0300

usb-moded (0.33) unstable; urgency=low

  * More security guesswork. Hopefully the doxygen tags are
    correct now. Fixes: NB#231818

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 17 Mar 2011 12:48:49 +0200

usb-moded (0.32) unstable; urgency=low

  * Coverity fixes. Fixes: NB#235405
  * Make charging fallback timeout shorter. Fixes: NB#234094

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 10 Mar 2011 16:08:58 +0200

usb-moded (0.31) unstable; urgency=low

  * Fix appearance of drive even if umounting fails.  Fixes: NB#229105
  * Mode setting and clean-up seperated from module loading.
  * Fix dev package dependencies. Fixes: NB#232170
  * Add credential tags to header file. Fixes: NB#231818

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Mon, 28 Feb 2011 14:21:58 +0200

usb-moded (0.30) unstable; urgency=low

  * signal re-mounting error, and mount fallback. Fixes: NB#207408

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Fri, 11 Feb 2011 16:14:24 +0200

usb-moded (0.29) unstable; urgency=low

  * Don't build docs when NODOCS is specified in the Debian build options. Fixes: NB#226245
    Patch supplied by Yakubenko Sergey
  * Listen to DSME shutdown signal to disconnect the current mode for ACT_DEAD. Fixes: NB#209842
  * Updated doxygen config to remove errors.

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Thu, 10 Feb 2011 12:11:04 +0200

usb-moded (0.28) unstable; urgency=low

  * Make sure filesystem is remounted before sending disconnect signal
  * Send pre-unmount signal. Fixes: NB#187735

 -- Philippe De Swert <philippe.de-swert@nokia.com>  Tue, 25 Jan 2011 14:51:33 +0200

usb-moded (0.27) unstable; urgency=low
