@@ -29,12 +29,18 @@
 #define FS_SYNC_KEY			"nofua"
 #define ALT_MOUNT_ENTRY			"altmount"
 #define ALT_MOUNT_KEY			"mount"
+#define UDEV_PATH_ENTRY			"udev"
+#define UDEV_PATH_KEY			"path"
 #define CDROM_PATH_ENTRY		"cdrom"
 #define CDROM_PATH_KEY			"path"
 
 const char * find_mounts(void);
 int find_sync(void);
 const char * find_alt_mount(void);
+#ifdef UDEV
+const char * find_udev_path(void);
+#endif
+
 #ifdef NOKIA
 const char * find_cdrom_path(void);
 #endif
